--- a/app/standalone-renderer.html
+++ b/app/standalone-renderer.html
@@ -8,8 +8,8 @@
   <style>
     body {
       margin: 0;
-      padding: 0;
-      background-color: #f5f5f5;
+      padding: 20px;
+      background: #f2ece921;
     }
   </style>
 </head>
