--- a/app/standalone-renderer.html
+++ b/app/standalone-renderer.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PaperProof Standalone Renderer</title>
+  <title>Paperproof</title>
   
   <!-- Favicon -->
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -20,7 +20,7 @@
     }
   </style>
 </head>
-<body>
+<body class="standalone">
   <div id="root"></div>
   <script src="./dist/standaloneRenderer.js"></script>
 </body>
